<resources>
    <string name="app_name">Avadhuta Gita</string>
    <string name="cover">Avadhuta Gita</string>
    <string name="texterror">Error@Invalid Count@Requested verse number exceeds total verses.~Or it could not be read from file.</string>
    <string name="touchtostart">Touch the Sage to start. Or use arrows.</string>
    <string name="nxtremtoast">Next verse in&#160;</string>
    <string name="nxtremmintoast">&#160;minutes</string>
    <string name="errorbadformat">Error : Verse is not correctly formatted.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rempaused">Avadhuta Gita Paused</string>
    <string name="defaultwhosaid">Unknown</string>
    <string name="defaultversenum">Verse Num</string>
    <string name="stopped">Stopped</string>
    <string name="status_auto">Auto Reading</string>
    <string name="status_user">User Reading</string>
    <string name="status_sch">Reading every</string>
    <string name="jumptitle">Jump to Verse</string>
    <string name="jumprange">Verse #</string>
    <string name="jumpcancel">Cancel</string>
    <string name="jumpok">Go</string>
    <string name="menu_name_info">Info</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Schedule</string>

    <string name="pref_title_social_recommendations">Turn off at night</string>
    <string name="pref_description_social_recommendations">Night hours - 22:00 to 06:00</string>


    <string name="pref_title_add_friends_to_messages">Frequency</string>
    <string-array name="pref_example_list_titles">
        <item>Every 20 Seconds</item>
        <item>Every 10 mins</item>
        <item>Every 20 mins</item>
        <item>Every 30 mins</item>
        <item>Every hour</item>
        <item>Every 3 hours</item>
        <item>Twice a day</item>
        <item>Once a day</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>1440</item>
    </string-array>

    <string name="pref_order">Order</string>
    <string-array name="pref_order_titles">
        <item>Sequential</item>
        <item>Random</item>
    </string-array>
    <string-array name="pref_order_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_rate">Speech Rate</string>
    <string-array name="pref_rate_titles">
        <item>Slower</item>
        <item>Normal</item>
        <item>Faster</item>
    </string-array>
    <string-array name="pref_rate_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_locale">Locale</string>
    <string-array name="pref_locale_titles">
        <item>Default</item>
        <item>EN-US</item>
        <item>EN-UK</item>
    </string-array>
    <string-array name="pref_locale_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_lang">Languages</string>
    <string-array name="pref_lang_titles">
        <item>Sanskrit</item>
        <item>English</item>
        <item>Both</item>
    </string-array>
    <string-array name="pref_lang_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Other</string>
    <string name="pref_autotitle">Auto Read</string>
    <string name="pref_autosumm">Read verses automatically every 20 secs</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Sound Alerts</string>

    <string name="pref_title_ringtone">Select Sound</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_speak">Speak Aloud</string>
    <string name="settings">Settings</string>
    <string name="go_to_verse">Go To Verse</string>
    <string name="chaprange">Chapter #1-8</string>
    <string name="gotochapter">Chapter # </string>
    <string name="versenum">Verse # </string>
    <string name="pref_title_tone">Sound</string>
    <string name="ttswelcome">Reading</string>
    <string name="autoreadtimedisp">20 seconds</string>
    <string name="menu_mute">Mute</string>
    <string name="shareSubject">Avadhuta Gita Reader App</string>
    <string name="reading">Reading every :</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="appNameSans">अवधूत गीता</string>


</resources>
